--- a/blog.html
+++ b/blog.html
@@ -26,11 +26,16 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
+    <meta property="og:url"           content="https://steinerrob.github.io/blog.html#article1" />
+    <meta property="og:title"         content="MyBlog " />
+    <meta property="og:description"   content="Here goes description bla bla bla " />
+    <meta property="og:image"         content="https://steinerrob.github.io/experimental/Habits.jpg" />
+
     <title>Welcome on my Blog</title>
     <link rel="icon" href="./web_cv/faviconB-32x32.png">
 
     <div id="fb-root"></div>
-<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v16.0" nonce="1dTyfinH"></script>
+   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v16.0" nonce="1dTyfinH"></script>
 
     <!--APPLE TOUCH ICON-->
     <link rel="apple-touch-icon" href="https://www.trimatrixlab.com/store/flatrica/images/site/apple-touch-icon.png">
@@ -67,6 +72,11 @@
 
 <script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script>
 <script src="scripts.js"></script>
+<script>
+    function SetOgImage(ogImage){
+    document.querySelector('meta[name="image"]').setAttribute("content", ogImage);
+}
+</script>
 </head>
 
 <body class="vsc-initialized">
@@ -92,7 +102,7 @@
                         <h3 style="text-align: center;" id="article1"> The advantages and disadvantages of running one’s own repair shop</h3>
                         <h5 style="text-align: center;"> 2023-01-22</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/OwnBusinessImg.jpg">
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/BlogImages/1OwnBusinessImg.jpg">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Since 2020 I have been running my own repair shop for smartphones and other mobile devices. During this time I’ve got many experiences, good ones but also bad ones. Many people think that running their own business has only benefits and they forget or don’t even think about the negatives.
@@ -105,8 +115,8 @@
                                 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
                                 <script type="IN/Share" data-url="https://www.linkedin.com"></script>
                             </div>
-                            <div class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" data-layout="" data-size="">
-                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse"" class="fb-xfbml-parse-ignore">
+                            <div onmouseover="SetOgImage()" class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
+                            <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
                         </div>
@@ -128,7 +138,7 @@
                         <h3 style="text-align: center;" id="article2"> Learning programming on your own - the hurdles and the pleasures </h3>
                         <h5 style="text-align: center;"> 2023-01-29</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/ProgrammingBlogImg.webp">
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/BlogImages/2ProgrammingBlogImg.webp">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;There are many people in the world who work as programmers. But not everyone went to college and studied programming. Some of them are learning programming on their own. Is it possible to study on your own and be on the same level of knowledge as a college student? No, haha.
@@ -158,7 +168,7 @@
                         <h3 style="text-align: center;" id="article3"> Summary - The Key to Success in College Is So Simple, It’s Almost Never Mentioned, NY Times</h3>
                         <h5 style="text-align: center;"> 2023-02-05</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/CollegeSuccessImg.jfif">
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/BlogImages/3CollegeSuccessImg.jfif">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;At the beginning of the article we meet Emily Zurek Small. She is a former college student and she is a nice example of the idea of the article. 
@@ -191,7 +201,7 @@
                         <h3 style="text-align: center;" id="article4">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 1</h3>
                         <h5 style="text-align: center;"> 2023-02-12</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 250px; margin-right: 20px;" src="web_cv/SmallChangesImg.jpg">
+                            <img style="float: left; height: 200px; width: 250px; margin-right: 20px;" src="web_cv/BlogImages/4SmallChangesImg.jpg">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The main point of this chapter is to introduce to you how even tiny changes may change your life. In this chapter we have nice examples from real life.
@@ -223,7 +233,7 @@
                         <h3 style="text-align: center;" id="article5">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 2</h3>
                         <h5 style="text-align: center;"> 2023-02-19</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/ThreeLayersImg.png">
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/BlogImages/5ThreeLayersImg.png">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The second chapter is trying to explain why it is easier to repeat bad habits, and why it is much harder to create new ones. The author describes that there are two reasons why it is challenging to change our habits. We are trying to change the wrong things and we are changing it in the wrong way. In this chapter we are going to look at the first one.       
@@ -253,7 +263,7 @@
                         <h3 style="text-align: center;" id="article6">Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 3 </h3>
                         <h5 style="text-align: center;"> 2023-02-26</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/CueCrawingImg.png">
+                            <img style="float: left; height: 200px; width: 200px; margin-right: 20px;" src="web_cv/BlogImages/6CueCrawingImg.png">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Psychologist Edward Thorndike was doing an experiment with cats. He discovered that repeating one action that gives us pleasure and reward is better to build a habit than an action which doesn't have a good and positive effect on us. This is the key to successfully creating a habit.
@@ -287,7 +297,7 @@
                         <h3 style="text-align: center;" id="article7" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 4 </h3>
                         <h5 style="text-align: center;"> 2023-03-05</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/pointingCalling.png">
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/BlogImages/7pointingCalling.png">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Chapter 4 starts with a story about a paramedic woman who saves the life of her father-in-law and about military analysts and their work with radar systems. Those stories have one thing in common and that is - if you are doing something repeatedly, your brain starts noticing important things, learning patterns and storing them for future use.
@@ -319,7 +329,7 @@
                         <h3 style="text-align: center;" id="article8" > Summary - Atomic Habits, James Clear, Tiny Changes - Remarkable Results, Chapter 5 </h3>
                         <h5 style="text-align: center;"> 2023-03-12</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px; " src="web_cv/PlanningImg.jpg">
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px; " src="web_cv/BlogImages/8PlanningImg.jpg">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;Chapter 5 begins with an experiment from 2001. Researchers from Great Britain were working with 248 people and the main point of the experiment was starting a new habit - exercise. People were divided into 3 groups. The first group had only one task, to track how often they exercised. The second group had to read about the exercise itself - what are the benefits of exercise for health. The third group had one additional task, they also had to prepare a schedule for the exercise, when - what time - where.The results were clear. The first and the second groups had similar results. But the third one had much better results.
@@ -349,7 +359,7 @@
                         <h3 style="text-align: center;" id="IBM" >My first month @ IBM </h3>
                         <h5 style="text-align: center;"> 2023-03-18</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/Badge photo.jpg">
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/BlogImages/9Badge photo.jpg">
                         </div>
                         
                         <p class="blog-blog">
@@ -383,7 +393,7 @@
                         <h3 style="text-align: center;" id="article9" >Atomic Habits, James Clear, Tiny Changes-Remarkable Results, Chapter 6</h3>
                         <h5 style="text-align: center;"> 2023-03-18</h5>
                         <div>
-                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/EnvironmentImg.webp">
+                            <img style="float: left; height: 200px; width: 300px; margin-right: 20px;" src="web_cv/BlogImages/10EnvironmentImg.webp">
                         </div>
                         <p class="blog-blog">
                             &emsp; &emsp;The 6th chapter starts with an example from real life. A primary care physician Anne Thorndike proved that it is possible to improve eating habits without changing the motivation or willpower of hospital staff and visitors but the change happened by reorganising the cafeteria.
