--- a/blog.html
+++ b/blog.html
@@ -72,6 +72,7 @@
 <script src="scripts.js"></script>
 <script>
     function SetOgImage(ogImage, title,){
+        alert("function has started")
     document.querySelector('meta[name="image"]').setAttribute("content", ogImage);
     document.querySelector('meta[name="title"]').setAttribute("content", title);
 }
