--- a/blog.html
+++ b/blog.html
@@ -71,9 +71,10 @@
 <script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script>
 <script src="scripts.js"></script>
 <script>
-    function SetOgImage(ogImage, title,){
-        alert("function has started")
-    document.querySelector('meta[name="image"]').setAttribute("content", ogImage);
+    function SetOgImage(ogImage, title){
+        var urlImg = "https://steinerrob.github.com/" + ogImage;
+        alert(urlImg)
+    document.querySelector('meta[name="image"]').setAttribute("content", urlImg);
     document.querySelector('meta[name="title"]').setAttribute("content", title);
 }
 </script>
@@ -115,7 +116,7 @@
                                 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
                                 <script type="IN/Share" data-url="https://www.linkedin.com"></script>
                             </div>
-                            <div onclick="SetOgImage('web_cv/BlogImages/1OwnBusinessImg.jpg','The advantages and disadvantages of running one’s own repair shop ')" class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
+                            <div onclick='SetOgImage("web_cv/BlogImages/1OwnBusinessImg.jpg","The advantages and disadvantages of running one’s own repair shop ")' class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
