--- a/blog.html
+++ b/blog.html
@@ -72,7 +72,7 @@
 <script src="scripts.js"></script>
 <script>
     function SetOgImage(ogImage, title){
-        var urlImg = "https://steinerrob.github.com/" + ogImage;
+        var urlImg = "https://steinerrob.github.io/" + ogImage;
         alert(urlImg)
     document.querySelector('meta[name="image"]').setAttribute("content", urlImg);
     document.querySelector('meta[name="title"]').setAttribute("content", title);
