--- a/blog.html
+++ b/blog.html
@@ -75,9 +75,9 @@
     {
         var urlImg = "https://steinerrob.github.io/" + ogImage;
         alert(urlImg)
-        document.querySelectorAll('meta[name="image"]').setAttribute("content", urlImg);
+        document.querySelectorAll('meta[name="og:image"]').setAttribute("content", urlImg);
         
-        document.querySelector('meta[name="title"]').setAttribute("content", title);
+        document.querySelector('meta[name="og:title"]').setAttribute("content", title);
     }
 </script>
 </head>
@@ -118,7 +118,7 @@
                                 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
                                 <script type="IN/Share" data-url="https://www.linkedin.com"></script>
                             </div>
-                            <div onmouseover='SetOgImage("web_cv/BlogImages/1OwnBusinessImg.jpg","The advantages and disadvantages of running one’s own repair shop ")' class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
+                            <div onmouseo='SetOgImage("web_cv/BlogImages/1OwnBusinessImg.jpg","The advantages and disadvantages of running one’s own repair shop ")' class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
