--- a/blog.html
+++ b/blog.html
@@ -26,9 +26,6 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
 
-    <meta property="og:title" content="Title " />
-    <meta property="og:image" content="https://steinerrob.github.io/experimental/Habits.jpg" />
-
     <title>Welcome on my Blog</title>
     <link rel="icon" href="./web_cv/faviconB-32x32.png">
 
@@ -69,18 +66,6 @@
     <link href="./web_cv/style_dark_dark.css" id="switch_style" rel="stylesheet">
 
 <script type="text/javascript" charset="UTF-8" src="./web_cv/common.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/util.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/marker.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/map.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/overlay.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/onion.js"></script><script type="text/javascript" charset="UTF-8" src="./web_cv/controls.js"></script>
-<script src="scripts.js"></script>
-<script>
-    function SetOgImage(ogImage, title)
-    {
-        var urlImg = "https://steinerrob.github.io/" + ogImage;
-        alert(urlImg)
-        document.querySelectorAll('meta[name="og:image"]').setAttribute("content", urlImg);
-        $('meta[property=og\\:image]').attr('content', urlImg);
-
-        document.querySelector('meta[name="og:title"]').setAttribute("content", title);
-    }
-</script>
 </head>
 
 <body class="vsc-initialized">
@@ -119,7 +104,7 @@
                                 <script src="https://platform.linkedin.com/in.js" type="text/javascript">lang: en_US</script>
                                 <script type="IN/Share" data-url="https://www.linkedin.com"></script>
                             </div>
-                            <div onmouseover='SetOgImage("web_cv/BlogImages/1OwnBusinessImg.jpg","The advantages and disadvantages of running one’s own repair shop ")' class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
+                            <div class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article1" >
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article1&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
@@ -150,7 +135,7 @@
                             <br><br> &emsp; &emsp;I am not sure what I should say about the pleasures of self-learning. In your life you may have many reasons why you can’t go to college. Yes, as an autodidact  I can confirm this. It’s not easy. In many cases you will be in this alone, but don’t worry, you just have to try and not give up. And this is the biggest pleasure. Results. May you struggle, may you not be able to find the right way, but if you don’t give up, I am sure eventually you will be successful and that feeling is what you are looking for. You can? find a solution on your own. 
                             <br><br> &emsp; &emsp;In the end my advice is: practice is the way. Of course, theory is a very important part of the journey, but practice makes you better in a tangible way. You will understand many things only once you try them in practice despite that you may have read them hundreds of times. Nobody was borned with knowledge already in their head so don’t be sad or disappointed if something does not work the first time you try it. Just give it another shot. 
                         </p>
-                        <div onclick="SetOgImage('web_cv/BlogImages/2ProgrammingBlogImg.webp','Learning programming on your own - the hurdles and the pleasures')" class="fb-share-button" style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article2" data-layout="" data-size="">
+                        <div class="fb-share-button" style="margin-left: 85%; margin-top: 20px;  " class="fb-share-button" data-href="https://steinerrob.github.io/blog.html#article2" data-layout="" data-size="">
                             <a target="_blank" class="fb-share-button" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fsteinerrob.github.io%2Fblog.html%23article2&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">
                                 <img src="web_cv/FbshareBtn.png" style="width: 75px; height: 30px">
                             </a>
